src/test/ui/issues/issue-15965.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-15965.rs:13:9
   |
LL | /         { return () }
LL | | //~^ ERROR type annotations needed [E0282]
LL | |     ()
   | |______^ cannot infer type
   |
   = note: type must be known at this point

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
