src/test/ui/issues/issue-15965.rs
fn main() {
    return
        { return () }
//~^ ERROR expected function, found `_`
    ()
    ;
}
